Fix scrollbar

--- a/front/src/styles/ListItem.scss
+++ b/front/src/styles/ListItem.scss
@@ -10,8 +10,7 @@
 .ListSearch ul {
   list-style-type: none;
   padding: 0;
-  // height: 100%;
-  overflow: auto;
+  overflow: hidden;
   margin: 0;
 }
 
